# bazel_proc_macro_example

./: BUILD  README.md  WORKSPACE
cargo/: Cargo.toml  crates.bzl
cargo/remote/: derive_more-0.99.2.BUILD  proc-macro2-1.0.6.BUILD  quote-1.0.2.BUILD  syn-1.0.8.BUILD
src/: lib.rs
toolchain/: BUILD  cc_toolchain_config.bzl  make_proxies.sh
toolchain/tools/: ar.sh  cpp.sh  gcc.sh  gcov.sh  ld.sh  nm.sh  objcopy.sh  objdump.sh  strip.sh
