[package]
name = "compile_with_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
derive_more = "=0.99.2"

[raze]
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//cargo"

# The target to generate BUILD rules for.
target = "x86_64-unknown-linux-gnu"

genmode = "Remote"

[raze.crates.proc-macro2.'1.0.6']
additional_flags = [
    "--cfg=use_proc_macro",
]
